# slit

./: .gitignore  IDEAS.md  README.md  USAGE.md  flake.nix  justfile
.backlog/: .context.yaml  index.yaml
.backlog/bugs/: B001-record-a-video-gif-of-slit-in.todo  B002-just-run-will-not-let-me-press.todo  B003-c-client-doesn-t-update-unless.todo  index.yaml
.github/workflows/: ci.yml  pages.yml  release.yml
.plan/: ci-release-plan.md
.plan/2026-04-06-anvil-creek/: GO_CHANGES.md  architecture.md  cli.md  features.md  index.md  layouts.md  microplan-c.md  microplan-go.md  microplan-rust.md  research.md  testing.md
aur/slitty/: .SRCINFO  PKGBUILD
aur/slitty-git/: .SRCINFO  PKGBUILD
c/: Makefile  buffer.c  buffer.h  completion.c  completion.h  configfile.c  configfile.h  debug.c  debug.h  layout.c  layout.h  main.c  render.c  render.h  slit.h  spinner.c  spinner.h  status.c  status.h  tee.c  tee.h  terminal.c  terminal.h  test_buffer  test_render  test_terminal
c/test/: test_buffer.c  test_render.c  (+1 more)
completions/: _slit  slit.bash  slit.fish
docs/: cross-impl-notes.md  demo-script.sh  feature-matrix.md
go/: bench_test.go  buffer.go  buffer_test.go  config.go  config_test.go  debug.go  go.mod  go.sum  layouts.go  layouts_test.go  main.go  maze_deep_test.go  model.go  model_test.go  render.go  render_test.go  spinner.go  spinner_test.go  tee.go
rust/: Cargo.toml
rust/src/: app.rs  buffer.rs  config.rs  debug.rs  layout.rs  main.rs  render.rs  spinner.rs  tee.rs
scripts/: benchmark  install.sh  slit-test-data
site/: DESIGN.md  downloads.html  index.html
(+23 files in other folders)
