[package]
name = "slit"
version = "0.1.0"
edition = "2021"
description = "Streaming terminal viewer with last-N-lines display"
authors = ["slit contributors"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
unicode-width = "0.1"
libc = "0.2"
anyhow = "1.0"
futures = "0.3.32"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
